--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.87.6",
+    "@walletconnect/ethereum-provider": "^2.23.0",
     "axios": "^1.6.2",
     "ethers": "^6.9.0",
     "next": "^14.0.0",
